Experiment with config settings and add intermediate plotting & checkpointing

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,13 +1,15 @@
 # Training Configuration
-batch_size: 64
+batch_size: 32
 num_layers: 12
 d_rna: 768
 d_protein: 1536
 d_model: 768
 num_heads: 8
-num_epochs: 100
+num_epochs: 10
 learning_rate: 1.0e-4
 patience: 5    # Early stopping patience
+checkpoint_interval: 25  # Save model every n iterations
+plot_interval: 10        # Plot every n iterations
 
 # Optimizer Configuration
 optimizer:
@@ -20,15 +22,15 @@ scheduler:
   params:
     mode: "min"             # Monitor 'min' value of validation loss
     factor: 0.5             # Reduce LR by this factor
-    patience: 2             # Number of validations with no improvement
+    patience: 3             # Number of validations with no improvement
     min_lr: 1.0e-6            # Minimum learning rate
 
 # Data Paths
 data_paths:
   protein_data_path: "./dataset/protein"
   rna_data_path: "./dataset/rna"
-  pairs_train_path: "./dataset/train.txt"
-  pairs_val_path: "./dataset/val.txt"
+  pairs_train_path: "./dataset/train_small.txt"
+  pairs_val_path: "./dataset/val_small.txt"
   pairs_test_path: "./dataset/test.txt"
 
 # Logging
