--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 __pycache__
-dataset/
+dataset/protein/
+dataset/rna/
+dataset/test.txt
+dataset/train.txt
+dataset/val.txt
 checkpoints/
 train.log
 plots
