New RNA model, dataset, and architecture

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 __pycache__/
-dataset/protein/
-dataset/rna/
-dataset/test.txt
-dataset/train.txt
-dataset/val.txt
+dataset/
 checkpoints/
 train.log
 plots
 code
 collect_code.sh
-ernierna/checkpoint/ERNIE-RNA_checkpoint/ERNIE-RNA_pretrain.pt
-ernierna/data
-ernierna/docs
-ernierna/results
+GenerRNA/checkpoint.pt
