--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,10 +12,12 @@ gpt_weights_path: "./GenerRNA/checkpoint.pt"
 # Training Configuration
 batch_size: 32
 num_epochs: 5
-rllm_learning_rate: 3.0e-4
-gpt_learning_rate: 5.0e-5
+rllm_learning_rate: 1.0e-3
+gpt_learning_rate: 1.0e-4
 checkpoint_interval: 4000  # Validate and save model every n iterations
 plot_interval: 200        # Plot every n iterations
+early_stopping: True
+early_stopping_patience: 8 # counted every checkpoint_interval
 num_workers_train: 8          # Number of workers for data loader
 num_workers_val: 4          # Number of workers for data loader
 
