--- a/config/rllm.yaml
+++ b/config/rllm.yaml
@@ -4,16 +4,16 @@ d_model: 640
 num_heads: 20 # Number of attention heads in cross attention blocks
 
 rllm_dropout: 0.2
-gpt_dropout: 0.1
+rnafm_dropout: 0.1
 
 tokenizer_path: "./tokenizer"
-gpt_weights_path: "./GenerRNA/checkpoint.pt"
+rnafm_checkpoint_path: "./checkpoints/rnafm_checkpoint.pth"
 
 # Training Configuration
 batch_size: 32
 num_epochs: 10
-rllm_learning_rate: 6.0e-4
-gpt_learning_rate: 5.0e-5
+rllm_learning_rate: 3.0e-4
+rnafm_learning_rate: 5.0e-5
 checkpoint_interval: 4000  # Validate and save model every n iterations
 plot_interval: 200        # Plot every n iterations
 early_stopping: True
